--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="Lab_7.0">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <dependent-module archiveName="Lab_2.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Lab_2.0/Lab_2.0">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
+        <wb-resource deploy-path="/" source-path="/WebContent/WEB-INF/lib"/>
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Lab_7.0/resources/jstl-1.2.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
